--- a/src/styles.css
+++ b/src/styles.css
@@ -124,15 +124,11 @@ main {
 }
 
 .videoContainer {
-    position: absolute;
-    width: 400px;
-    height: 300px;
-    border-radius: 40px;
-
-    top: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    overflow: hidden;
 
     &&::after, &&::before {
         content: "";
@@ -145,23 +141,26 @@ main {
         height: calc(100% + 2px);
         z-index: -1;
         animation: backgroundAnimation 20s linear infinite;
+        border-radius: 12px;
     }
   
     video {
         position: relative;
-        border-radius: 40px;
-        width: 400px;
-        height: 300px;
+        border-radius: 12px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
 
 canvas {
-    z-index: 100;;
+    z-index: 100;
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    margin: auto;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
 }
 
 .emoji {
